# firefly-api

./: Cargo.toml  README.md  wrangler.toml
.github/workflows/: check.yml  deploy.yml
src/: lib.rs
src/api/v1/: artwork.rs  mod.rs  song.rs
